EntityEditor: refactor (tool, gui layout)